--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         incididunt ut labore et.ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.
                         ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.
                     </p>
-                    <hr class="header__line feedback__line" />
+                    <hr class="header__line feedback__line">
                 </div>
                 <section class="feedback__body section">
                     <form class="feedback__form">
@@ -241,6 +241,27 @@
             </section>
         </div>
     </main>
+    <footer class="footer">
+        <div class="footer__content section">
+            <p class="footer__copyright">
+                &copy; Copyright @Junaed 2023, All rights reserved.
+            </p>
+            <div class="footer__social-links">
+                <a class="footer__link" href="">
+                    <img src="./images/Twitter_Rounded_Solid.png" alt="Лого твитера">
+                </a>
+                <a class="footer__link" href="">
+                    <img src="./images/LinkedIn_Rounded_Solid.png" alt="Лого линкеда">
+                </a>
+                <a class="footer__link" href="">
+                    <img src="./images/Google_Rounded_Solid.png" alt="Лого гугл плюс">
+                </a>
+                <a class="footer__link" href="">
+                    <img src="./images/Facebook_Rounded_Solid.png" alt="Лого фейсбука">
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
