--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;500;700;900&display=swap" rel="stylesheet">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;500;700;900&display=swap" 
+    rel="stylesheet">-->
 </head>
 
 <body class="page">
@@ -197,7 +198,7 @@
             </div>
         </section>
         <section class="section subscribe">
-            <div class="subscribe__heder">
+            <div class="subscribe__header">
                 <h2 class="subscribe__heading section-heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
                 <p class="subscribe__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
             </div>
@@ -239,6 +240,7 @@
                     <p class="contacts__line">(+88) 017 617 46373</p>
                 </address>
             </section>
+            <div class="feedback__right-box contacts__decor"></div>
         </div>
     </main>
     <footer class="footer">
