lection 2.12: добавил адаптив на сайт

--- a/index.html
+++ b/index.html
@@ -202,18 +202,16 @@
                 <h2 class="subscribe__heading section-heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
                 <p class="subscribe__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
             </div>
-            <form class="subscribe__form" action="" method="post">
+            <form class="subscribe__form" action="service.js" method="post">
                 <input class="subscribe__input" type="email" name="email" placeholder="Email Address..." required>
                 <button class="subscribe__button" type="submit">subscribe</button>
             </form>
         </section>
         <div class="feedback-contacts">
-            <div class="feedback__left-box"></div>
-
             <section class="feedback">
                 <div class="feedback__header">
-                    <h2 class="feedback__heading">get in touch</h2>
-                    <p class="section-heading feedback__text">
+                    <h2 class="feedback__heading section-heading">get in touch</h2>
+                    <p class="feedback__text">
                         Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor
                         incididunt ut labore et.ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.
                         ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.
@@ -240,7 +238,6 @@
                     <p class="contacts__line">(+88) 017 617 46373</p>
                 </address>
             </section>
-            <div class="feedback__right-box contacts__decor"></div>
         </div>
     </main>
     <footer class="footer">
