--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;500;700;900&display=swap" 
     rel="stylesheet">-->
+    <script async src="./js/index.js"></script>
 </head>
 
 <body class="page">
@@ -30,6 +31,23 @@
                         <a class="menu__link" href="#contact">Contact</a>
                     </li>
                 </ul>
+                <div class="popup-menu">
+                    <button class="popup-menu__button"></button>
+                    <ul class="popup-menu__list hide-popup">
+                        <li class="popup-menu__item">
+                            <a class="popup-menu__link" href="#">Home</a>
+                        </li>
+                        <li class="popup-menu__item">
+                            <a class="popup-menu__link" href="#">Portfolio</a>
+                        </li>
+                        <li class="popup-menu__item">
+                            <a class="popup-menu__link" href="#">About us</a>
+                        </li>
+                        <li class="popup-menu__item">
+                            <a class="popup-menu__link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </header>
     </div>
