--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                             <a class="popup-menu__link" href="#">Home</a>
                         </li>
                         <li class="popup-menu__item">
-                            <a class="popup-menu__link" href="#">Portfolio</a>
+                            <a class="popup-menu__link" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="popup-menu__item">
-                            <a class="popup-menu__link" href="#">About us</a>
+                            <a class="popup-menu__link" href="#about">About us</a>
                         </li>
                         <li class="popup-menu__item">
-                            <a class="popup-menu__link" href="#">Contact</a>
+                            <a class="popup-menu__link" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -70,7 +70,10 @@
                     </a>
                 </div>
                 <a class="intro__link">
-                    <img class="intro__image" src="./images/office.png" alt="Красный квадрат" width="551" height="356">
+                    <iframe width="555" height="375" src="https://www.youtube.com/embed/UoQpgdtzxLE"
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                        encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                    </iframe>
                 </a>
             </section>
         </div>
@@ -121,7 +124,8 @@
                 </section>
             </div>
         </section>
-        <section class="section feature">
+
+        <section class="section feature" id="portfolio">
             <div class="feature__header">
                 <h2 class="feature__heading section-heading">
                     feature products
@@ -170,9 +174,10 @@
                 <img class="product" src="./images/work-8.jpg" alt="Скриншот макета">
             </div>
         </section>
-        <section class="section team">
+
+        <section class="section team" id="about">
             <div class="team__heder">
-                <h2 class="team__heading section-heading" id="about">
+                <h2 class="team__heading section-heading">
                     Meet our team
                 </h2>
                 <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
@@ -215,6 +220,7 @@
                 </div>
             </div>
         </section>
+
         <section class="section subscribe">
             <div class="subscribe__header">
                 <h2 class="subscribe__heading section-heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
@@ -225,7 +231,8 @@
                 <button class="subscribe__button" type="submit">subscribe</button>
             </form>
         </section>
-        <div class="feedback-contacts">
+
+        <div class="feedback-contacts" id="contact">
             <section class="feedback">
                 <div class="feedback__header">
                     <h2 class="feedback__heading section-heading">get in touch</h2>
@@ -264,16 +271,16 @@
                 &copy; Copyright @Junaed 2023, All rights reserved.
             </p>
             <div class="footer__social-links">
-                <a class="footer__link" href="">
+                <a class="footer__link" href="https://twitter.com/">
                     <img src="./images/Twitter_Rounded_Solid.png" alt="Лого твитера">
                 </a>
-                <a class="footer__link" href="">
+                <a class="footer__link" href="https://www.linkedin.com/">
                     <img src="./images/LinkedIn_Rounded_Solid.png" alt="Лого линкеда">
                 </a>
-                <a class="footer__link" href="">
+                <a class="footer__link" href="https://plus.google.com/">
                     <img src="./images/Google_Rounded_Solid.png" alt="Лого гугл плюс">
                 </a>
-                <a class="footer__link" href="">
+                <a class="footer__link" href="https://www.facebook.com/">
                     <img src="./images/Facebook_Rounded_Solid.png" alt="Лого фейсбука">
                 </a>
             </div>
