--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                             sed dooing eiusmod tempor incididut labore Ui / Ux , print template.
                         </p>
                         <div class="team__selected-links">
-                            <a class="team__selected-link" href="">Facebook</a>
-                            <a class="team__selected-link" href="">Dribble</a>
-                            <a class="team__selected-link" href="">Behance</a>
-                            <a class="team__selected-link" href="">Twiter</a>
+                            <a class="team__selected-link" href="https://www.facebook.com/">Facebook</a>
+                            <a class="team__selected-link" href="https://www.dribbble.com/">Dribble</a>
+                            <a class="team__selected-link" href="https://www.behance.net/">Behance</a>
+                            <a class="team__selected-link" href="https://twitter.com/">Twiter</a>
                         </div>
                     </div>
                     <section class="members">
