--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <form class="feedback__form">
                         <input class="feedback__input feedback__name" type="text" name="name" placeholder="Name"
                             required>
-                        <input class="feedback__input feedback__mail" type="text" name="mail" placeholder="Mail"
+                        <input class="feedback__input feedback__mail" type="text" name="mail" placeholder="Your Mail"
                             required>
                         <textarea class="feedback__input feedback__message" name="message" cols="30" rows="5"
                             placeholder="Type your message"></textarea>
