--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <h2 class="subscribe__heading section-heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
                 <p class="subscribe__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
             </div>
-            <form class="subscribe__form" action="service.js" method="post">
+            <form class="subscribe__form" method="post">
                 <input class="subscribe__input" type="email" name="email" placeholder="Email Address..." required>
                 <button class="subscribe__button" type="submit">subscribe</button>
             </form>
